# mega-survivor

./: .gitignore  CMakeLists.txt  README.md
Assets/Levels/Level1/: chao.csv  chao.tmx  chao2.tsx
Assets/Levels/Level1-1/: level1-1.csv  level1-1.tmx  level1-1.tsx
Assets/Sprites/Bass/: player.json
Assets/Sprites/Goomba/: Goomba.json
Assets/Sprites/Koopa/: koopa.json
Assets/Sprites/Mario/: Mario.json
Assets/Sprites/SuperMario/: SuperMario.json
Assets/Sprites/enemy1/: enemy1.json
Assets/Sprites/enemy2/: enemy2.json
Assets/Sprites/enemy3/: enemy3.json
Assets/Sprites/enemy4/: enemy4.json
Assets/Sprites/player/: player.json
Assets/Sprites/weapons/: texture.json
Shaders/: Base.frag  Base.vert
Source/: CSV.h  Color.cpp  Color.h  Game.cpp  Game.h  Main.cpp  Math.cpp  Math.h  Random.cpp  Random.h
Source/Actors/: Actor.cpp  Actor.h  Aim.cpp  Aim.h  Block.cpp  Block.h  Coin.cpp  Coin.h  Enemy.cpp  Enemy.h  Goomba.cpp  Goomba.h  Mario.cpp  Mario.h  Mushroom.cpp  Mushroom.h  Player.cpp  Player.h  QuestionBlock.cpp  QuestionBlock.h  Spawner.cpp  Spawner.h  XPGem.cpp  XPGem.h
Source/Actors/enemies/: Bat.cpp  Bat.h  Enemy1.cpp  Enemy1.h  EnemyFly.cpp  EnemyFly.h  EnemyGround.cpp  EnemyGround.h  EnemyType.h
Source/Actors/weapons/: Projectile.cpp  Projectile.h  WeaponType.h
Source/Actors/weapons/aura/: AuraActor.cpp  AuraActor.h  AuraWeapon.cpp  AuraWeapon.h
Source/Actors/weapons/boomerang/: BoomerangGun.cpp  BoomerangGun.h  BoomerangProjectile.cpp  BoomerangProjectile.h  BoomerangWeapon.cpp  BoomerangWeapon.h
Source/Actors/weapons/ice_gun/: IceGun.cpp  IceGun.h  IceProjectile.cpp  IceProjectile.h
Source/Actors/weapons/laser_beam/: LaserGun.cpp  LaserGun.h  LaserProjectile.cpp  LaserProjectile.h
Source/Actors/weapons/main_gun/: Bullet.cpp  Bullet.h  MainGun.cpp  MainGun.h
Source/Actors/weapons/saw_blade/: SawGun.cpp  SawGun.h  SawProjectile.cpp  SawProjectile.h
Source/Audio/: AudioSystem.cpp  AudioSystem.h
Source/Components/: Component.cpp  Component.h  ParticleSystemComponent.cpp  ParticleSystemComponent.h  ProjectilePoolComponent.cpp  ProjectilePoolComponent.h  WeaponComponent.cpp  WeaponComponent.h
Source/Components/Drawing/: AnimatorComponent.cpp  AnimatorComponent.h  DrawComponent.cpp  DrawComponent.h  RectComponent.cpp  RectComponent.h
Source/Components/Physics/: AABBColliderComponent.cpp  AABBColliderComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Source/Components/Upgrades/: UpgradeComponent.cpp  UpgradeComponent.h
Source/Data/: CharacterDB.h  ControlsDB.h
Source/Managers/: ColorPalette.cpp  ColorPalette.h  UpgradeManager.cpp  UpgradeManager.h
Source/Renderer/: Font.cpp  Font.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp
Source/UI/: UIButton.cpp  UIButton.h  UIElement.cpp  UIElement.h  UIImage.cpp  UIImage.h  UIRect.cpp  UIRect.h  UIText.cpp  UIText.h
Source/UI/Screens/: CharSelection.cpp  CharSelection.h  ControlsMenu.cpp  ControlsMenu.h  GameOver.cpp  GameOver.h  HUD.cpp  HUD.h  Level1.cpp  Level1.h  LevelUp.cpp  LevelUp.h  MainMenu.cpp  MainMenu.h  MetaProg.cpp  MetaProg.h  PauseMenu.cpp  PauseMenu.h  PausedMenu.cpp  PausedMenu.h  SceneFade.cpp  SceneFade.h  UIScreen.cpp  UIScreen.h  UpgradeStore.cpp  UpgradeStore.h
